	  Affected functions:
		setLength() / setByteLength() / addLength() / addByteLength()
                length() / byteLength()
	- message kind and priority changed from int to short. Affected functions:
		kind() / setKind()
		priority() / setPriority()
	- added some extra fields required by sequence chart drawing: cause event
	  number, message id, message tree id, etc.
	- removed two static methods of limited usefulness: cmpbydelivtime(), 
	  cmpbypriority().
	
	Statistics classes:
	- cStatistic: renamed samples() to count(). This affects cStdDev, 
	  cWeightedStdDev and basically all statistics classes (they all 
	  inherit from cStatistic)
	- cWeightedStdDev: implemented stddev(); also fixed min() and max()
	  (they bogusly returned min/max of the weight*value products).
	  For stddev(), code is based on the patch from Peter Woitek.
        - cStatistic: added 3 new functions, to access values underlying weighted
          statistics: weightedSum(), sqrSumWeights(), weightedSqrSum()
        - cStatistic: added isWeighted()
        - cStatistic: added merge(cStatistic *) for aggregating statistics, 
          and implemented it in subclasses
        - cDensityEstBase etc: transformed() renamed to isTransformed(); 
          added setCellSize()
        - cLongHistogram: revised the way histogram cells are set up. Now it
          throws an error if all given constraints cannot be satisfied (so that
          numCells*cellSize==rangeMax-rangeMin, all integers)

        cTopology changes:
        - added extractFromNetwork(Predicate*), to support specifying conditions
          in a type-safe way (without void* casts)
        - extractByModuleType() not longer exists, use the new extractByNedTypeName()
          method instead. Code like
            topo.extractByModuleType("Host", "Router", NULL); 
          should be replaced by something like 
            topo.extractByModuleType(cStringTokenizer("Host Router").asVector());